# databricks-distributed-training-cookbook

./: .gitignore  .nojekyll  CLAUDE.md  README.md  _quarto.yml  index.html  index.qmd  placeholder.txt  robots.txt  search.json  sitemap.xml  theme.scss
00-foundations/: README.html  README.md  auth.md  cluster-recipes.md  common-pitfalls.md  concepts-distributed-training.html  concepts-distributed-training.md  concepts-recommender-baseline.html  concepts-recommender-baseline.md  concepts-torchdistributor-internals.html  concepts-torchdistributor-internals.md  concepts-torchdistributor-with-lightning.html  concepts-torchdistributor-with-lightning.md  data-loading.md  data-pipeline.html  data-pipeline.md  data-uc-volumes-checkpoints.html  data-uc-volumes-checkpoints.md  databricks-environments.md  debug-common-pitfalls.html  debug-common-pitfalls.md  distributed-training-concepts.md  env-auth.html  env-auth.md  env-cluster-recipes.html  env-cluster-recipes.md  env-databricks-environments.html  env-databricks-environments.md  env-library-management.html  env-library-management.md  library-management.md  mlflow-tracking.md  ops-mlflow-tracking.html  ops-mlflow-tracking.md  ops-resume-training.html  ops-resume-training.md  ops-uc-model-registry.html  ops-uc-model-registry.md  recommender-baseline.md  resume-training.md  (+2 more)
01-notebook-based/: 00-setup.html  (+19 more)
03-custom-package-script-based/custom_packages/: README.md  pyproject.toml
03-custom-package-script-based/custom_packages/src/recommender_pkg/: __init__.py  lightning_trainer.py  model.py  torch_distributor_trainer.py
(+132 files in other folders)
